--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "first start dev": "npm run i && npm run start"
-
+    "start-prod": "npm run build && npm i -g serve && npx serve -s build"
   },
   "eslintConfig": {
     "extends": [
