fix scripts and readme

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "first-start-dev": "npm i && react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "first-start-prod": "npm i && npm run build && npm i -g serve && npx serve -s build",
     "start-prod": "npm run build && npm i -g serve && npx serve -s build"
   },
   "eslintConfig": {
